ignite-4374: suggestions are changed